hphp/hack/test/typecheck/reactive/rx_conditional2.php.like_types.exp
File "rx_conditional2.php", line 20, characters 14-16:
You are trying to access the method 'get' but this is a dynamic value or an object of type A<T> (Typing[4062])
File "rx_conditional2.php", line 18, characters 54-57:
Definition is here
